<?xml version="1.0"?>
<package format="2">
  <name>ardrone_landing</name>
  <version>1.0.0</version>
  <description>A package for autonomus landing of an AR Drone 2.0</description>

  <!-- Maintainer of the project -->
  <maintainer email="benedek@petrovicz.com">Benedek Petrovicz</maintainer>

  <!-- License of the project -->
  <license>BSD</license>

  <!-- Research documentation site of UAV laboratories at the PPCU Institute of Information Technology and Bionics -->
  <url type="website">http://uavlab.itk.ppke.hu</url>

  <!-- Author of the project -->
  <author email="benedek@petrovicz.com">Benedek Petrovicz</author>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ardrone_control</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ardrone_control</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
